# skelly_viewer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  time_series_GUI.py  time_series_viewer_widget.py
.github/workflows/: bump_version_on_commit_to_main.yml  publish_to_pypi_on_commit_to_main.yml  tauri-publish.yaml
basic_repo_template/: __init__.py  __main__.py  basic_repo_template.py  test_test.py
basic_repo_template/system/: default_paths.py
install/: install-python.bat  install-python.js  install-python.sh  requirements.txt
skelly_viewer/: __init__.py  __main__.py  skelly_viewer.py  skelly_viewer_widget.py
skelly_viewer/config/: default_paths.py  folder_and_file_names.py  folder_directory.py
skelly_viewer/data_loader/: data_loader.py
skelly_viewer/data_wrangling/: data_loader.py  get_bounding_cube.py  skeleton_orienter.py
skelly_viewer/experimental/: checkable_combo_box.py  matplotlib_viewer.py
skelly_viewer/experimental/plotly/: capture_volume_3d_viewer.py  data_loader.py  plotly_dash_setup.py  plotly_gpt_anim_working1.py  plotly_skeleton_view.py  qt_webengine.py  skeleton_viewer.py  view_3d_widget.py
skelly_viewer/experimental/plotly_exp/: capture_volume_3d_viewer.py  plotly_dash_setup.py  view_3d_widget.py
skelly_viewer/experimental/pyqtgraph/: pyqtgl_viewer.py
skelly_viewer/experimental/pyvista/: pyvista_viewer.py  spheres.py
skelly_viewer/experimental/pyvista/examples/: collisions.py  multi-slider-widget.py  test.py
skelly_viewer/experimental/three_js/backend/: data_loader.py  main.py
skelly_viewer/experimental/three_js/frontend/: package-lock.json  package.json
skelly_viewer/experimental/three_js/frontend/src/: App.js
skelly_viewer/gui/qt/: skelly_viewer_widget.py  skellyview_main_window.py
skelly_viewer/gui/qt/widgets/: multi_camera_capture_widget.py  multi_video_display.py  skeleton_view_widget.py  slider_widget.py
skelly_viewer/gui/qt/widgets/time_series_widgets/: trajectory_view_widget.py
skelly_viewer/gui/qt/widgets/time_series_widgets/sub_widgets/: marker_selector_widget.py  time_series_viewer_widget.py
skelly_viewer/matplotlib/: animation_creator.py  axis_3d_view.py  figure_maker.py  matplotlib_widget.py  subplot_2d.py  subplot_3d.py
skelly_viewer/matplotlib/subplots/: base_subplot.py  subplot_2d.py  subplot_3d.py  timeseries_subplot.py  video_subplot.py
skelly_viewer/system/: default_paths.py
skelly_viewer/utilities/: freemocap_data_loader.py  get_video_paths.py  load_sample_data.py  mediapipe_skeleton_builder.py  skeleton_builder.py  video_handler.py
skelly_viewer/utils/: freemocap_data_loader.py  mediapipe_skeleton_builder.py
skelly_viewer/utils/GUI_widgets/: multi_camera_capture_widget.py  skeleton_view_widget.py
skelly_viewer/utils/workers/: video_processing_worker.py
skellyviewer/: __init__.py
src-nuxt/components/: FolderPicker.vue  SideBar.vue  ThreeJsViewport.vue
src-nuxt/layouts/: default.vue
src-nuxt/pages/: cameras.vue  index.vue
src-nuxt/stores/: csvDataStore.ts
src-python/: main.py
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
time_series_widgets/: marker_selector_widget.py  trajectory_view_widget.py
