[tool.poetry]
name = "skelly-viewer"
version = "0.1.0"
description = ""
authors = ["Skelly FreeMoCap <info@freemocap.org>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <3.13"
pyinstaller = "^6.9.0"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
websockets = "^12.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
bumpver = "^2023.1129"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
